--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main{
 .home{
     width: 100%;
     height: 600px;
-    background-image: url(/mars_img\ \(1\).jpg);
+    background-image: url("../assets/images/mars_img\ \(1\).jpg");
     width: 100%;
     object-fit: cover;
     height: 600px;
@@ -60,7 +60,7 @@ main{
     
 }
 .home1{
-    background-image: url("../MTG_S1_astronautrd_DSC_5675_desktop_de44a48f5d.jpg");
+    background-image: url("../assets/images/MTG_S1_astronautrd_DSC_5675_desktop_de44a48f5d.jpg");
     background-position-x: center;
      background-size:1300px;
     background-repeat: no-repeat;
@@ -79,7 +79,7 @@ main{
 
 
 .home2{
-    background-image:url("../Axiom_4_outsidehangar_IMG_3412_desktop_f4cf1ef34c.jpg");
+    background-image:url("../assets/images/Axiom_4_outsidehangar_IMG_3412_desktop_f4cf1ef34c.jpg");
     /* background-position-x: 10%; */
     background-size:1300px;
     background-repeat: no-repeat;
@@ -88,7 +88,7 @@ main{
     /* font-family:  Arial, Verdana, sans-serif; */
 }
 .home3{
-    background-image:url("../Flight_9_Website_Desktop_4_f1db4d08ec.jpg") ;
+    background-image:url("../assets/images/Flight_9_Website_Desktop_4_f1db4d08ec.jpg") ;
     background-size: 1320px;
     background-repeat: no-repeat;
     color: white;
@@ -96,7 +96,7 @@ main{
     font-family:  Arial, Verdana, sans-serif;
 }
 .home4{
-    background-image:url("../Eva_Suit_Desktop_alternate_1cf9bae18e.jpg") ;
+    background-image:url("../assets/images/Eva_Suit_Desktop_alternate_1cf9bae18e.jpg") ;
     background-size: 1300px;
     background-repeat:no-repeat ;
     color: white;
